Issue #31. Fixes the gap between logo and log in button.

--- a/static/css/rue89.css
+++ b/static/css/rue89.css
@@ -102,7 +102,8 @@ header.global.slim .course-header {
     display: none; }
 
 body:not(.view-incourse) header.global.slim .course-header {
-  visibility: hidden; }
+  visibility: hidden;
+  height: 0; }
 
 .view-login header.global-new > nav h1.logo a, .view-login header.global.slim > nav h1.logo a, .view-login header.global > nav h1.logo a, .view-passwordreset header.global-new > nav h1.logo a, .view-passwordreset header.global.slim > nav h1.logo a, .view-passwordreset header.global > nav h1.logo a, .view-register header.global-new > nav h1.logo a, .view-register header.global.slim > nav h1.logo a, .view-register header.global > nav h1.logo a, body header.global-new > nav h1.logo a, body header.global.slim > nav h1.logo a, body header.global > nav h1.logo a {
   background-image: url("../images/logo-rue89-h.svg");
